<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">


    <RelativeLayout
        android:id="@+id/image_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="254dp"
        android:background="@drawable/githubhd"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_below="@id/image_wallpaper"
        android:background="@color/white"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/detail_profile"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:src="@drawable/profile"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/white"
        android:layout_marginTop="151dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/text_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_profile"
        android:layout_marginTop="10dp"
        android:text="@string/detail_name"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:textColor="@color/font_black"
        android:fontFamily="@font/poppinsbold"
        />
    <TextView
        android:id="@+id/text_detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_profile"
        android:text="@string/detail_id"
        android:layout_marginTop="40dp"
        android:textSize="10sp"
        android:layout_marginStart="20dp"
        android:textColor="@color/font_black"
        android:fontFamily="@font/poppinsregular"
        />
    <TextView
        android:id="@+id/text_detail_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_detail_username"
        android:text="@string/detail_desc"
        android:layout_marginTop="10dp"
        android:textSize="10sp"
        android:layout_marginStart="20dp"
        android:textColor="@color/font_black"
        android:fontFamily="@font/poppinsmedium"
        />


    <RelativeLayout
        android:id="@+id/layout_foll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_detail_desc"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp">

        <TextView
            android:id="@+id/text_total_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_followers"
            android:textSize="16sp"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/font_black"
            />
        <TextView
            android:id="@+id/text_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text_total_followers"
            android:text="@string/text_followers"
            android:textSize="10sp"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/font_black"
            android:layout_marginLeft="7dp"
            android:layout_centerInParent="true"
            />

        <ImageView
            android:id="@+id/image_line"
            android:layout_width="1dp"
            android:layout_height="14dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/text_followers"
            android:background="@drawable/line_1" />

        <TextView
            android:id="@+id/text_total_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image_line"
            android:text="@string/total_following"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/font_black"
            />

        <TextView
            android:id="@+id/text_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="7dp"
            android:layout_toRightOf="@id/text_total_following"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/text_following"
            android:textColor="@color/font_black"
            android:textSize="10sp" />

        <ImageView
            android:id="@+id/image_line2"
            android:layout_width="1dp"
            android:layout_height="14dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/text_following"
            android:background="@drawable/line_1" />

        <TextView
            android:id="@+id/text_total_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image_line2"
            android:text="@string/total_repo"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/font_black"
            />

        <TextView
            android:id="@+id/text_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="7dp"
            android:layout_toRightOf="@id/text_total_repo"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/text_repo"
            android:textColor="@color/font_black"
            android:textSize="10sp" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progres_usersdetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        />
    <LinearLayout
        android:id="@+id/layout_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:layout_below="@id/layout_foll"
        >

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:tabTextColor="@color/font_black"
            />
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_favorite_24"
        app:tint="@android:color/white"
        android:backgroundTint="@color/font_black"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/image_wallpaper"
        />

    <ProgressBar
        android:id="@+id/progress_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        />

</RelativeLayout>